# slykey

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix  slykey.yaml
.github/workflows/: tests.yml
nix/: home-manager.nix
src/: cli.rs  config.rs  main.rs
src/core/: engine.rs  expansion.rs  instance_lock.rs  mod.rs
src/io/: events.rs  mod.rs  output.rs
src/platform/: app_indicator.rs  dbus_notification.rs  mod.rs  x11_rdev.rs
