[package]
name = "slykey"
version = "0.2.4"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dbus = "0.9"
dirs = "6"
emojis = "0.7"
enigo = "0.2"
gtk = "0.18.2"
libappindicator = "0.9.0"
rdev = "0.5"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
